--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,7 +64,7 @@
             </div>
             <div align="center">
               <div class="canvas">
-                <canvas #chart></canvas>
+                <canvas id="myChart"></canvas>
               </div>
             </div>
           </ng-template>
